removed whitebox from tests, removed manual date checking